--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                     <a href="#join">Become a Founder</a>
                     <a href="#venues">For Venues</a>
                     <a href="mailto:partiedlife@gmail.com">Contact</a>
-                    <a href="privacy.html">Privacy Policy</a>
-                    <a href="terms.html">Terms of Service</a>
+                    <a href="/privacy">Privacy Policy</a>
+                    <a href="/terms">Terms of Service</a>
                 </div>
             </div>
             <p class="footer-copy">© 2026 Partied · Zagreb, Croatia</p>
